[gd_scene load_steps=2 format=2]

[ext_resource path="res://file_downloader.gd" type="Script" id=1]

[node name="FileDownloader" type="HTTPRequest"]
script = ExtResource( 1 )

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="request_completed" from="." to="." method="_on_request_completed"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
